fixed an issue where website appeared too small on iphones

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,10 +79,6 @@ img {
     width: 100%
 }
 
-.glide__arrow {
-    /* font-size: 1.5rem; */
-}
-
 .glide__arrow svg {
     color: white;
     fill: white
